# fastapi-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1250d76705a6_init_tables.py  e32cc9bb765c_init_tables.py  f20ee365c47a_init_tables.py
app/: main.py
app/api/: deps.py  main.py  router.py
app/api/routes/: auth.py  post.py  user.py
app/auth/: backend.py  manager.py  permissions.py
app/core/: config.py  db.py  exceptions.py  logging.py  observability.py  redis.py  tracing.py
app/db/: post.py  user.py
app/models/: __init__.py  link_tables.py  permission.py  post.py  role.py  user.py
app/models/mixins/: timestamps.py
app/scheduler/: jobs.py  scheduler.py
app/schemas/: post.py  response.py
app/utils/: typing.py
app/workers/: provider.py  scheduler.py  tasks.py
tests/: conftest.py
tests/api/routes/: post_test.py
tests/integration/: README.md  conftest.py
tests/integration/api/: post_test.py
tests/unit/schemas/: post_schema_test.py
tests/utils/: utils.py
