[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asgi-correlation-id>=4.3.4",
    "fastapi-users[oauth,sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "taskiq>=0.12.2",
    "taskiq-fastapi>=0.5.0",
    "taskiq-redis>=1.2.2",
]
