[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asgi-correlation-id>=4.3.4",
    "fastapi-users[oauth,sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-redis>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "taskiq>=0.12.2",
    "taskiq-fastapi>=0.5.0",
    "taskiq-redis>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "prek>=0.3.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-m",
    "not integration",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "integration: tests that hit real infrastructure (db/redis)",
]
env = [
    "METRICS_ENABLED=False",
    "OTEL_ENABLED=False",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/workers/*",
    "app/scheduler/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "alembic"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py314"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
    "T201",
    "ASYNC",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "B904",
    "W191",
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
